feat(syndication): add rnr widget to demo pages

--- a/assets/m/m.store.sony.com/products/27-XBR55X900A.html
+++ b/assets/m/m.store.sony.com/products/27-XBR55X900A.html
@@ -1215,11 +1215,8 @@
 <div class="reviews-modifiers-container"></div>
 <div class="reviews-summary-container"></div>
 <div class="reviews-container"></div>
-<button class="reviews-next-btn">
-  <span class="default">View More</span>
-  <span class="loading">Loading</span>
-  <span class="no-more">Back to Top</span>
-</button>
+
+      <li:reviews-widget href="http://localhost:1337/products/1/reviews"></li:reviews-widget>
 
 <script type="text/x-handlebars" data-template-name="reviewsSummary"><div id="reviewsSummary">
   <h2>Reviews Summary</h2>
@@ -2425,5 +2422,6 @@
 	</ul>
 </nav>
   </script>
+  <script src="http://localhost:1337/js/scripts/syndicate.js"></script>
 </body>
 </html>
