--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -2834,42 +2834,10 @@ href="http:&#47;&#47;ws.sel.sony.com&#47;PIPWebServices&#47;RetrievePublicAsset&
 Carton Dimensions: 69 1/2 x 33  1/2 x 8  3/4 in (1755 x 849 x 222 mm)</li><li class="ws-spec-detail-item">Dimensions (Approx.) : TV only: 57 5/8 x 29 1/2 x 4(2 3/8) in (1463 x 749 x 100.6 mm)
 TV with stand: 57 5/8 x 30 3/4 x 16 in (1463 x 778 x 405 mm)</li><li class="ws-spec-detail-item">Weight (Approx.) : TV only: 73.0 lbs (33.1 kg)
 TV with stand: 76.0 lbs (34.5 kg)</li></ul>
-</li></ul></div><div class="kor-collection-link-list-section sny-product-reviews-tab"><div id="BVRRSecondarySummaryContainer"></div><div 
-class="ws-group sny-prod-reviews-cms" 
-><div class="cms-spot" style="width: 450px; height: 370px; margin-top: 60px; background: url('../gsi/static/WFS/SNYNA-SNYUS-Site/-/SNYNA/en_US/assets/img/global/HarrisPoll_CMspot.jpg') no-repeat;">
-</div></div>
+</li></ul></div><div class="kor-collection-link-list-section sny-product-reviews-tab">
 
+  <li:reviews-widget href="http://localhost:1337/products/1/reviews"></li:reviews-widget>
 
-
-
-
-
-
-
-
-
-	
-	
-
-	
-
-	
-	
-		
-	
-
-	
- 
- 
- 
- 
-
-	
-		
-	
-
-	
-	
 	<div id="BVRRContainer">
 		
 				
@@ -4845,5 +4813,7 @@ $("a#tobeclicked").trigger('click');
 
 })(jQuery)
 </script>
+<!--<script src="http://54.193.114.254:1337/js/scripts/syndicate.js"></script>-->
+<script src="http://localhost:1337/js/scripts/syndicate.js"></script>
 </body>
 </html> 
