chore(demo): update demo pages to use prod instance for rnr widgets

--- a/assets/m/m.store.sony.com/products/27-XBR55X900A.html
+++ b/assets/m/m.store.sony.com/products/27-XBR55X900A.html
@@ -1216,7 +1216,7 @@
 <div class="reviews-summary-container"></div>
 <div class="reviews-container"></div>
 
-      <li:reviews-widget href="http://localhost:1337/products/1/reviews"></li:reviews-widget>
+      <li:reviews-widget href="http://54.193.114.254:1337/products/3/reviews"></li:reviews-widget>
 
 <script type="text/x-handlebars" data-template-name="reviewsSummary"><div id="reviewsSummary">
   <h2>Reviews Summary</h2>
@@ -2422,6 +2422,6 @@
 	</ul>
 </nav>
   </script>
-  <script src="http://localhost:1337/js/scripts/syndicate.js"></script>
+  <script src="http://54.193.114.254:1337/js/scripts/syndicate.js"></script>
 </body>
 </html>
