Updating to test CI

--- a/assets/admin/index.html
+++ b/assets/admin/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css">
+    <!-- Testing CI -->
   </head>
 <body ng-app="lwaAdminApp" ng-controller="TopCtrl">
     <div class="container">
