--- a/assets/admin/index.html
+++ b/assets/admin/index.html
@@ -41,9 +41,10 @@
 
     <script src="javascripts/jquery.js"></script>
     <script src="javascripts/lodash.js"></script>
-    <script src="javascripts/angular.js"></script>
     <script src="javascripts/bootstrap.js"></script>
+    <script src="javascripts/angular.js"></script>
     <script src="javascripts/angular-route.js"></script>
+    <script src="javascripts/ui-bootstrap.js"></script>
     <script src="javascripts/highcharts-ng.js"></script>
     <script src="javascripts/highcharts.js"></script>
     <script src="javascripts/chance.js"></script>
