--- a/assets/admin/index.html
+++ b/assets/admin/index.html
@@ -45,11 +45,12 @@
     <script src="javascripts/angular.js"></script>
     <script src="javascripts/angular-route.js"></script>
     <script src="javascripts/ui-bootstrap.js"></script>
+    <script src="javascripts/ui-bootstrap-tpls.js"></script>
     <script src="javascripts/highcharts-ng.js"></script>
     <script src="javascripts/highcharts.js"></script>
     <script src="javascripts/chance.js"></script>
     <script src="javascripts/app.js"></script>
-    <script src="javascripts/main.js"></script>
+    <script src="javascripts/demand.js"></script>
     <script src="javascripts/home.js"></script>
 </body>
 </html>
