--- a/assets/admin/index.html
+++ b/assets/admin/index.html
@@ -71,6 +71,7 @@
     <script src="javascripts/bootstrap.js"></script>
     <script src="javascripts/angular.js"></script>
     <script src="javascripts/angular-route.js"></script>
+    <script src="javascripts/angular-animate.js"></script>
     <script src="javascripts/ui-bootstrap.js"></script>
     <script src="javascripts/ui-bootstrap-tpls.js"></script>
     <script src="javascripts/highcharts-ng.js"></script>
