--- a/assets/m/m.store.sony.com/products/27-XBR55X900A.html
+++ b/assets/m/m.store.sony.com/products/27-XBR55X900A.html
@@ -160,8 +160,12 @@
 
   
   <header class="product-header">
-  <h1>55&quot; Class (54.6&quot; diag) XBR 4K Ultra HD TV</h1>
-</header>
+    <h1>55&quot; Class (54.6&quot; diag) XBR 4K Ultra HD TV</h1>
+    <div class="klout-score">
+      <div class="score-summary"></div>
+      <div class="stats-summary"></div>
+    </div>
+  </header>
 
   <div class="top-rate product-info">
     
