fix(klout score) increase zindex to ensure hover displays

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -1432,7 +1432,7 @@
         width: 575px;
         position: absolute;
         margin-top: 8px;
-        padding: 5px;
+        padding: 30px 20px;
         height: 190px;
         background-color: #FFFFFF;
         border: 1px solid #339933;
@@ -1450,6 +1450,7 @@
       #klout-score-hover .stats {
         height: 160px;
         width: 395px;
+        padding-left: 10px;
         vertical-align: top;
       }
 
