chore(syndication): update all syndication links to use product id 1

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -1252,6 +1252,8 @@
     <div class="ws-group sny-product-header sny-stickyheader">
     <div class="ws-group gd-row sny-product-head-content">
       <style>
+        .sny-dropmenu { display: none !important; }
+
         .flag2 {
           -webkit-box-sizing: border-box;
           -moz-box-sizing: border-box;
@@ -4347,7 +4349,7 @@
     </div>
     <div class="kor-collection-link-list-section sny-product-reviews-tab">
 
-      <li:reviews-widget href="http://54.193.114.254:1337/products/3/reviews"></li:reviews-widget>
+      <li:reviews-widget href="http://54.193.114.254:1337/products/1/reviews"></li:reviews-widget>
 
       <div id="BVRRContainer">
 
