--- a/assets/m/m.store.sony.com/products/27-XBR55X900A.html
+++ b/assets/m/m.store.sony.com/products/27-XBR55X900A.html
@@ -131,24 +131,92 @@
   var selectedColor = "";
 </script>
 
-
-
-
-
 <section class="product-container">
   
-    <div class="back-link">
+<div class="back-link">
 	<a href="http://m.store.sony.com/categories/-~cat-27-catid-All-XBR-Series-TVs" class="back">Back to XBR Series 4K Ultra HD TVs</a>
 </div>
-
-  
+<style type="text/css">
+  .product-header > .left-block {
+    display: inline-block;
+    width: 70px;
+    height: 70px;
+  }
+  .product-header > .right-block {
+    display: inline-block;
+    vertical-align: top;
+    width: 70%;
+  }
+  .product-header > .left-block > .mobile-kscore {
+    height: 60px;
+    width: 60px;
+    background: #FFF;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+  }
+  .product-header > .left-block > #kscore-btn-default {
+    background-image: url(/lithium/mobile_KScore_btn_default.png);
+  }
+  .product-header > .left-block > #kscore-btn-press {
+    visibility: hidden;
+    background-image: url(/lithium/mobile_KScore_btn_press.png);
+  }
+  .product-header > .left-block:active > #kscore-btn-default {
+    visibility: hidden;
+  }
+  .product-header > .left-block:active > #kscore-btn-press,
+  .product-header > .left-block.clicked > #kscore-btn-press {
+    visibility: visible;
+  }
+  .product-header > .right-block > .stars {
+    height: 20px;
+    width: 120px;
+    background-image: url(/lithium/mobile_stars.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 5px;
+  }
+  .product-header .klout-score-flyout {
+    display: none;
+  }
+  .product-header .klout-score-flyout > div {
+    height: 110px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .product-header .klout-score-flyout > .score-summary {
+    width:28%;
+    background: #FFF url(/lithium/mobile_KScore.png) no-repeat;
+    background-size: cover;
+  }
+  .product-header .klout-score-flyout > .stats-summary {
+    width: 67%;
+    background: #FFF url(/lithium/mobile_attributes.png) no-repeat;
+    background-size: cover;
+  }
+</style>
   <header class="product-header">
-    <h1>55&quot; Class (54.6&quot; diag) XBR 4K Ultra HD TV</h1>
-    <div class="klout-score">
+    <div class="left-block" >
+      <div id="kscore-btn-default" class="mobile-kscore"></div>
+      <div id="kscore-btn-press" class="mobile-kscore"></div>
+    </div>
+    <div class="right-block">
+      <h1>55&quot; Class (54.6&quot; diag) XBR 4K Ultra HD TV</h1>
+      <div class="stars"></div>
+      <a>24 Reviews</a> | <a>300 +Ks</a>
+    </div>
+
+    <div id="klout-score-flyout" class="klout-score-flyout">
       <div class="score-summary"></div>
       <div class="stats-summary"></div>
     </div>
   </header>
+<script type="text/javascript">
+  jQuery('.left-block').on('click',function(){
+    jQuery('#klout-score-flyout').show();
+  });
+</script>
 
   <div class="top-rate product-info">
     
