--- a/assets/m/m.store.sony.com/products/27-XBR55X900A.html
+++ b/assets/m/m.store.sony.com/products/27-XBR55X900A.html
@@ -137,6 +137,9 @@
 	<a href="http://m.store.sony.com/categories/-~cat-27-catid-All-XBR-Series-TVs" class="back">Back to XBR Series 4K Ultra HD TVs</a>
 </div>
 <style type="text/css">
+  .product-header {
+    position: relative;
+  }
   .product-header > .left-block {
     display: inline-block;
     width: 70px;
@@ -178,22 +181,68 @@
     margin-bottom: 5px;
   }
   .product-header .klout-score-flyout {
-    display: none;
+    position: absolute;
+    visibility: hidden;
+    z-index: 50;
   }
-  .product-header .klout-score-flyout > div {
+  .klout-score-flyout > .inner-flyout {
+    background-color: #FFFFFF;
+    border: 1px solid #339933;
+  }
+  .product-header .klout-score-flyout .inner-flyout > div {
     height: 110px;
     display: inline-block;
     vertical-align: middle;
   }
-  .product-header .klout-score-flyout > .score-summary {
-    width:28%;
-    background: #FFF url(/lithium/mobile_KScore.png) no-repeat;
-    background-size: cover;
+  .product-header .klout-score-flyout .inner-flyout > div > img {
+    width: 100%;
+    padding: 5px;
   }
-  .product-header .klout-score-flyout > .stats-summary {
+  .product-header .klout-score-flyout .inner-flyout > .score-summary {
+    width:28%;
+  }
+  .product-header .klout-score-flyout .inner-flyout > .stats-summary {
     width: 67%;
-    background: #FFF url(/lithium/mobile_attributes.png) no-repeat;
-    background-size: cover;
+  }
+
+  #klout-score-flyout .inner-flyout .arrow {
+    border: 1px solid #339933;
+    position: absolute;
+  }
+
+  #klout-score-flyout .inner-flyout > .arrow,
+  #klout-score-flyout .inner-flyout > .arrow::after {
+    box-sizing: border-box;
+    position: absolute;
+    display: block;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+  }
+
+  #klout-score-flyout .inner-flyout > .arrow {
+    border-width: 11px;
+  }
+
+  #klout-score-flyout .inner-flyout > .arrow::after {
+    border-width: 10px;
+  }
+
+  #klout-score-flyout .inner-flyout > .arrow {
+    left: 30px;
+    margin-left: -11px;
+    border-top-width: 0;
+    border-bottom-color: #339933;
+    top: -10px;
+  }
+
+  #klout-score-flyout .inner-flyout > .arrow::after {
+    content: " ";
+    top: 1px;
+    margin-left: -10px;
+    border-top-width: 0;
+    border-bottom-color: #ffffff;
   }
 </style>
   <header class="product-header">
@@ -208,13 +257,20 @@
     </div>
 
     <div id="klout-score-flyout" class="klout-score-flyout">
-      <div class="score-summary"></div>
-      <div class="stats-summary"></div>
+      <div class="inner-flyout">
+        <div class="score-summary">
+          <img src="/lithium/mobile_KScore.png">
+        </div>
+        <div class="stats-summary">
+          <img src="/lithium/mobile_attributes.png">
+        </div>
+        <div class="arrow"></div>
+      </div>
     </div>
   </header>
 <script type="text/javascript">
   jQuery('.left-block').on('click',function(){
-    jQuery('#klout-score-flyout').show();
+    jQuery('#klout-score-flyout').css('visibility', 'visible');
   });
 </script>
 
