feat(qanda): added qanda tab to demo page

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -3494,6 +3494,9 @@
       <li role="listitem" class="kor-collection-link-list-navigation-item sny-product-reviews-tab">
         <a href="javascript:void(0)" class="kor-collection-link">Reviews</a>
       </li>
+      <li role="listitem" class="kor-collection-link-list-navigation-item sny-product-qanda-tab">
+        <a href="javascript:void(0)" class="kor-collection-link">Qanda</a>
+      </li>
       <li role="listitem" class="kor-collection-link-list-navigation-item sny-product-accessories-tab">
         <a href="javascript:void(0)" class="kor-collection-link">Accessories</a>
       </li>
@@ -4412,6 +4415,10 @@
       <div
           class="ws-group sny-prod-reviews-cms2"
           ></div>
+    </div>
+    <div class="kor-collection-link-list-section sny-product-qanda-tab">
+      <li:qanda-widget href="http://54.193.114.254:1337/products/1/qanda"></li:qanda-widget>
+
     </div>
     <div class="kor-collection-link-list-section sny-product-accessories-tab">
 
