--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -1413,7 +1413,9 @@
         margin-top: 8px;
         padding: 30px 20px;
         background-color: #FFFFFF;
-        border: 1px solid #339933;
+        border: 1px solid #b5b5b5;
+        -webkit-box-shadow: 0 0 12px #b5b5b5;
+        box-shadow: 0 0 12px #b5b5b5;
         z-index: 100;
       }
       #klout-score-hover img {
@@ -1428,45 +1430,6 @@
         width: 395px;
         padding-left: 10px;
         vertical-align: top;
-      }
-      #klout-score-hover .inner-div .arrow {
-        border: 1px solid #339933;
-        position: absolute;
-      }
-
-      #klout-score-hover .inner-div > .arrow,
-      #klout-score-hover .inner-div > .arrow::after {
-        box-sizing: border-box;
-        position: absolute;
-        display: block;
-        width: 0;
-        height: 0;
-        border-color: transparent;
-        border-style: solid;
-      }
-
-      #klout-score-hover .inner-div > .arrow {
-        border-width: 11px;
-      }
-
-      #klout-score-hover .inner-div > .arrow::after {
-        border-width: 10px;
-      }
-
-      #klout-score-hover .inner-div > .arrow {
-        left: 36px;
-        margin-left: -11px;
-        border-top-width: 0;
-        border-bottom-color: #339933;
-        top: -11px;
-      }
-
-      #klout-score-hover .inner-div > .arrow::after {
-        content: " ";
-        top: 1px;
-        margin-left: -10px;
-        border-top-width: 0;
-        border-bottom-color: #ffffff;
       }
     </style>
     <script type="text/javascript">
