fix(qanda): changed the name on the qanda tab to questions

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -3495,7 +3495,7 @@
         <a href="javascript:void(0)" class="kor-collection-link">Reviews</a>
       </li>
       <li role="listitem" class="kor-collection-link-list-navigation-item sny-product-qanda-tab">
-        <a href="javascript:void(0)" class="kor-collection-link">Qanda</a>
+        <a href="javascript:void(0)" class="kor-collection-link">Questions</a>
       </li>
       <li role="listitem" class="kor-collection-link-list-navigation-item sny-product-accessories-tab">
         <a href="javascript:void(0)" class="kor-collection-link">Accessories</a>
